--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ body {
     font-weight: bolder;
 }
 
+#shadowbtm {
+	background: url("shadow2.png");
+	height:23px;
+	width: 738px;
+	display: block;
+	margin:auto;
+}
+
 nav {
     width: 100%;
     margin: auto;
