--- a/style.css
+++ b/style.css
@@ -108,3 +108,30 @@ nav ul ul ul {
 	position: absolute; left: 100%; top:0;
 }
 
+#leftcontent {
+    width: 70%;
+    padding: 22px;
+    box-sizing: border-box;
+    border-right: grey solid 0.2px;
+}
+
+#banner {
+	background: url("http://placehold.it/738x146");
+	width: 100%;
+	height: 146px;
+	margin-bottom: 5px;
+}
+
+.bannertxt {
+	display: block;
+    font-size: 24px;
+    font-weight: bold;
+    padding: 35px 0 0 414px;
+}
+
+.bannersubtxt {
+	display: block;
+    font-size: 23px;
+    padding: 0 0 0 451px;
+}
+
